# SpectrumAI

./: .dockerignore  .env.example  .gitattributes  .gitignore  CLAUDE.md  DEVELOPMENT_PLAN.md  LICENSE  README.md  docker-compose.yml  download_datasets.py
.claude/: settings.json
.github/workflows/: ci.yml
backend/: .dockerignore  .env.example  Dockerfile  docker-entrypoint.sh  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py  0002_identification_result_payload.py
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py
backend/app/api/v1/: __init__.py  dependencies.py  exception_handlers.py  router.py  schemas.py
backend/app/api/v1/routers/: __init__.py  compounds.py  functional_groups.py  health.py  history.py  identify.py  reports.py  settings.py  spectra.py
backend/app/core/: __init__.py  config.py
backend/app/db/: __init__.py  base.py  session.py
backend/app/db/models/: __init__.py  cache_entry.py  compound.py  compound_functional_group.py  functional_group.py  identification_request.py  identification_result.py  model_version.py  predicted_functional_group.py  spectrum.py  spectrum_embedding.py  user.py
backend/app/db/repositories/: __init__.py  base.py  cache_entry.py  compound.py  functional_group.py  identification_request.py  model_version.py  spectrum.py  spectrum_embedding.py  user.py
backend/app/domain/: __init__.py  dto.py  errors.py
backend/app/interpretation/: __init__.py  gradcam.py
backend/app/ml/: __init__.py  _ml_path.py  checkpoint_loader.py  components.py  cross_validation.py  inference_service.py
backend/app/parsing/: __init__.py  csv_parser.py  detect.py  jcamp_parser.py  models.py
backend/app/preprocessing/: __init__.py  baseline.py  config.py  normalize.py  pipeline.py  resample.py  smoothing.py
backend/app/reports/: __init__.py  pdf_generator.py
backend/app/services/: __init__.py  compound.py  history.py  identification.py  spectrum.py
backend/scripts/: seed_compounds.py
backend/tests/integration/: conftest.py  test_compounds.py  test_functional_groups.py  test_health.py  test_history.py  test_identify.py  test_identify_batch.py  test_reports.py  test_seed_compounds.py  test_settings.py  test_spectra.py
backend/tests/load/: README.md  locustfile.py
backend/tests/perf/: conftest.py  test_inference_benchmark.py  test_pipeline_benchmark.py  test_predefense_pipeline_benchmark.py
backend/tests/robustness/: conftest.py  test_corrupted_jcamp.py  test_encodings.py  test_graceful_degradation.py  test_invalid_data.py  test_out_of_range.py
backend/tests/unit/: conftest.py  test_health.py
backend/tests/unit/interpretation/: test_gradcam.py
backend/tests/unit/parsing/: conftest.py  test_csv_parser.py  test_detect.py  test_jcamp_parser.py  test_parse_spectrum.py
backend/tests/unit/parsing/fixtures/: missing_xunits.jdx  nonnumeric.csv  three_columns.csv  valid_acetone.csv  valid_no_header.csv  wrong_xunits.jdx
backend/tests/unit/preprocessing/: conftest.py  test_baseline.py  test_normalize.py  test_pipeline.py  test_resample.py  test_smoothing.py
backend/tests/unit/reports/: test_pdf_generator.py
backend/tests/unit/test_ml/: test_components.py  test_cross_validation.py  test_inference_service.py
backend/tests/unit/test_repositories/: test_cache_entry_repository.py  test_compound_repository.py  test_functional_group_repository.py  test_identification_request_repository.py  test_model_version_repository.py  test_spectrum_repository.py  test_user_repository.py
demo/predefense_spectra/: README.md  selection.json
docs/: DEMO_SCRIPT.md  INSTALL.md  KAGGLE_TRAINING.md  OPERATIONS_GUIDE.md  USER_GUIDE.md
docs/test-report/: README.md  gost-19.301-79.md  requirements-matrix.md
docs/test-report/benchmark/: README.md  results.json
docs/test-report/coverage/: class_index.html  function_index.html  index.html  status.json  z_11f5e49853feae61___init___py.html  z_11f5e49853feae61_pdf_generator_py.html  z_2cd66ae4e8bbbf86___init___py.html  z_2cd66ae4e8bbbf86_csv_parser_py.html  z_2cd66ae4e8bbbf86_detect_py.html  z_2cd66ae4e8bbbf86_jcamp_parser_py.html  z_2cd66ae4e8bbbf86_models_py.html  z_311acb9c3d04c524___init___py.html  z_311acb9c3d04c524_base_py.html  z_311acb9c3d04c524_session_py.html  z_318a38d6e64b9af9___init___py.html  z_318a38d6e64b9af9_gradcam_py.html  z_4a9cca768ff3c21b___init___py.html  (+61 more)
frontend/: .dockerignore  .eslintrc.cjs  .gitignore  Dockerfile  SETUP.md  index.html  nginx.conf  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts  tsconfig.json  tsconfig.node.json  vite.config.ts
frontend/public/: example.jdx
frontend/src/: App.tsx  index.css  main.tsx
ml/: README.md  pyproject.toml
ml/configs/: cnn1d.yaml  cnn1d_predefense.yaml  contrastive.yaml  contrastive_predefense.yaml
ml/data/processed/: predefense_stats.json
ml/experiments/predefense/: metrics.json
ml/notebooks/: 02_predefense_train.ipynb
ml/pipelines/: __init__.py  augmentations.py  dataset.py  labeling.py  losses.py  metrics.py  retrieval.py  retrieval_metrics.py
ml/pipelines/models/: __init__.py  cnn1d.py  molecule_tower.py  spectrum_tower.py
ml/pipelines/training/: __init__.py  contrastive_trainer.py  seed.py  split.py  trainer.py
ml/scripts/: __init__.py  build_faiss_index.py  build_synthetic_dataset.py  download_chemberta.py  pick_demo_spectra.py  train_cnn1d.py  train_contrastive.py  verify_preprocessing.py
ml/scripts/data_collection/: apply_labeling.py  apply_preprocessing.py  compute_stats.py  download_datasets.py  merge_nist_dataset.py  merge_predefense.py  select_predefense_subset.py  select_subset.py
ml/tests/: conftest.py  test_augmentations.py  test_build_synthetic.py  test_cnn1d.py  test_contrastive_trainer_smoke.py  test_data_collection_smoke.py  test_dataset.py  test_faiss_retriever.py  test_gradcam_with_cnn.py  test_infonce.py  test_labeling.py  test_losses.py  test_metrics.py  test_molecule_tower.py  test_retrieval_metrics.py  test_spectrum_tower.py  test_split_by_inchi.py  test_trainer_smoke.py
models/: MANIFEST.json  README.md
(+81 files in other folders)
