[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "spectrumai-backend"
version = "0.1.0"
description = "SpectrumAI backend — распознавание органических соединений по ИК-спектрам"
readme = "../README.md"
requires-python = "==3.11.*"
license = { file = "../LICENSE" }
authors = [{ name = "Тихонов Вадим Витальевич" }]

dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "pydantic-settings>=2.4",
    "python-multipart>=0.0.9",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "psycopg[binary]>=3.2",
    "torch>=2.3",
    "numpy>=1.26",
    "scipy>=1.13",
    "scikit-learn>=1.5",
    "jcamp>=1.2",
    "pandas>=2.2",
    "rdkit-pypi>=2022.9.5",
    "faiss-cpu>=1.8",
    "transformers>=4.44",
    "redis>=5.0",
    "structlog>=24.4",
    "tensorboard>=2.16",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "httpx>=0.27",
    "ruff>=0.6",
    "black>=24.8",
    "mypy>=1.11",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

# -----------------------------------------------------------------------------
# Ruff: линтер + форматтер. Длина строки 100 — по CLAUDE.md §6.
# -----------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = ["alembic/versions"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "N",   # pep8-naming
    "SIM", # flake8-simplify
    "RUF", # ruff-specific
]
# RUF001/RUF002/RUF003 — предупреждения о визуально похожих кириллических символах
# в строках/docstrings. По CLAUDE.md §6 docstrings и комментарии на русском
# намеренно, поэтому такие совпадения регулярны и не являются ошибкой.
ignore = ["RUF001", "RUF002", "RUF003"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["B", "SIM"]
"alembic/versions/**" = ["E501"]  # длинные seed-строки в миграции

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

# -----------------------------------------------------------------------------
# Black: резервный форматтер (стек CLAUDE.md §4 включает black).
# -----------------------------------------------------------------------------
[tool.black]
line-length = 100
target-version = ["py311"]

# -----------------------------------------------------------------------------
# Mypy: strict-режим для пакета app (CLAUDE.md §6).
# -----------------------------------------------------------------------------
[tool.mypy]
python_version = "3.11"
strict = true
packages = ["app"]
plugins = ["pydantic.mypy"]
warn_unused_configs = true
show_error_codes = true
exclude = ["alembic/versions"]

[[tool.mypy.overrides]]
module = [
    "jcamp.*",
    "faiss.*",
    "rdkit.*",
    "scipy.*",
    "sklearn.*",
    "transformers.*",
    "pandas.*",
]
ignore_missing_imports = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

# -----------------------------------------------------------------------------
# Pytest.
# -----------------------------------------------------------------------------
[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-ra --strict-markers"
